Tue Feb  9 04:38:49 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Debugged statistics collecting.

        * performance-tests/Bench/tests/thru/test-commands.txt:

          Added statistics gathering argument to p2 command lines.

Mon Feb  8 18:03:34 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Added script PID to system statistics output file.  This will
          allow statistics to be gathered in a loopback test without
          conflicts.
          Corrected a documentation issue.

        * performance-tests/Bench/tests/thru/p1-be-*.ini:

          Updated Topics to be BEST_EFFORT.  This was preventing
          associations on the return trip from being made.

Mon Feb  8 16:17:24 UTC 2010  Steven Stallion  <stallions@ociweb.com>

        * java/idl2jni/codegen/idl2jni_visitor.h:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:

          Updated ast_visitor interface for upcoming DOC x.7.7 release.

Mon Feb  8 15:32:31 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/tools/mkpkg:

          Use correct configuration file source for package.

Mon Feb  8 15:10:54 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Correct a syntax error.

        * performance-tests/Bench/tools/mkpkg:

          Add the new througput test configuration files to the built
          package.  Added a note about versions on the transport library
          link establishment as well.

Sat Feb  6 00:01:39 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/run_test:

          Added new '-C' option to indicate that process and system
          statistics should be collected.  System statistics are gathered
          using a single 'vmstat' command during the test, while process